hphp/hack/test/typecheck/instanceof/instanceof_shape.php.exp
File "instanceof_shape.php", line 14, characters 21-23:
Unexpected typedef (Naming[2052])
File "instanceof_shape.php", line 3, characters 6-8:
Definition is here
